# got-rag-chatbot

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  test_graph_direct.py  test_rag.py
cfg/: config.json
data/gold/: gold_labels.jsonl  validation_queue.csv
notebook_experiments/: 01_data_analysis.ipynb  02_llm_validation_metrics.ipynb  03_graph_validation.ipynb  04_analysis_judge.ipynb
src/: app.py  config.py  config_manager.py
src/api/: dependencies.py  main.py  routes.py
src/eval/: dataset_generator.py  inference.py  judge.py
src/graph/: builder.py  cleaner.py  edge_builder.py  validator.py
src/graph/edge_builder/: __init__.py  alias_index.py  audit.py  builder.py  config.py  io.py  parsing.py  stats.py  synthetic.py
src/ingestion/: neo4j_loader.py  scraper.py
src/rag/: augmenter.py  generator.py  graph_search.py  graph_searcher.py  pipeline.py  retriever.py  vector_store.py
src/schemas/: chat.py  document.py
src/tools/: app_validator.py  audit_db.py  evaluate_graph.py  revalidate_type.py
src/utils/: llm_factory.py  logger.py  text.py
