[project]
name = "got-rag-chatbot"
version = "0.1.0"
description = "A chatbot leveraging RAG techniques for enhanced responses."
authors = [
    { name = "Diego Páez", email = "diripar8@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mwparserfromhell>=0.7.2",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
]
